# nimbus-vault-server

./: .env.example  .env.local.example  .env.prod.example  .gitignore  .gitmodules  README.md
migrations/: 20250627172004_init.down.sql  20250627172004_init.up.sql
scripts/certificates/: generate-ca.sh  generate-server-cert.sh  setup-certificates.sh
scripts/nimbus-vault-db-only/: docker-compose.yml  run-db-only.zsh
source/: .gitignore  Cargo.toml
source/application/: Cargo.toml
source/application/src/: env.rs  errors.rs  lib.rs  services.rs  state.rs  use_cases.rs
source/application/src/services/: auth.rs  crypto.rs  errors.rs  repositories.rs  time.rs
source/application/src/services/auth/: errors.rs
source/application/src/services/crypto/: errors.rs
source/application/src/services/repositories/: device_repository.rs  errors.rs  user_repository.rs
source/application/src/services/repositories/device_repository/: errors.rs
source/application/src/services/repositories/user_repository/: errors.rs
source/application/src/services/time/: errors.rs
source/application/src/use_cases/: builder.rs  device.rs  errors.rs  user.rs
source/application/src/use_cases/builder/: errors.rs
source/application/src/use_cases/device/: errors.rs  register.rs
source/application/src/use_cases/device/register/: errors.rs
source/application/src/use_cases/user/: errors.rs  register.rs  schema.rs
source/application/src/use_cases/user/register/: errors.rs  schema.rs
source/domain/: Cargo.toml
source/domain/src/: entities.rs  enums.rs  errors.rs  lib.rs
source/domain/src/entities/: device.rs  user.rs
source/domain/src/entities/device/: errors.rs  specifications.rs
source/domain/src/entities/user/: errors.rs  specifications.rs  value_objects.rs
source/domain/src/entities/user/value_objects/: errors.rs
source/domain/src/value_objects/: password_hash.rs
source/domain/src/value_objects/password_hash/: errors.rs
source/entrypoint/: Cargo.toml
source/entrypoint/src/: main.rs
source/infrastructure/: Cargo.toml  build.rs
source/infrastructure/src/: configuration.rs  database.rs  lib.rs  proto.rs  services.rs  webapi.rs
source/infrastructure/src/database/: db_entities.rs  enums.rs  errors.rs
source/infrastructure/src/database/db_entities/: device.rs  user.rs
source/infrastructure/src/database/enums/: conversions.rs
source/infrastructure/src/proto/: auth.rs
source/infrastructure/src/services/: auth.rs  crypto.rs  repositories.rs  time.rs
source/infrastructure/src/services/repositories/: device_repository.rs  user_repository.rs
source/infrastructure/src/webapi/: errors.rs  handlers.rs  router.rs
source/infrastructure/src/webapi/handlers/: auth.rs
source/infrastructure/src/webapi/handlers/auth/: register_user.rs  signup.rs
source/shared/: Cargo.toml
source/shared/src/: environment.rs  lib.rs
