[package]
name = "nimbus_vault_server"
version = "0.1.0"
edition = "2024"

[dependencies]
nimbus_vault_server_domain = { path = "../domain" }
nimbus_vault_server_application = { path = "../application" }
nimbus_vault_server_infrastructure = { path = "../infrastructure" }
nimbus_vault_server_shared = { path = "../shared" }

dotenvy = { version = "0.15.7" }
tokio = { version = "1.45.1", features = ["full"] }