[package]
name = "nimbus_vault_server_infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
nimbus_vault_server_domain = { path = "../domain" }
nimbus_vault_server_application = { path = "../application" }
nimbus_vault_server_shared = { path = "../shared" }

sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono", "json"] }
tokio = { version = "1.45.1", features = ["full"] }
ulid = { version = "1.2.1", features = ["postgres", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# Protobuf
prost = "0.12"

# Crypto
sha2 = "0.10"
hex = "0.4"

[build-dependencies]
prost-build = "0.12"